<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".DrinkLogFragment"
                                                   android:animateLayoutChanges="true">

    <TextView
            android:text="@string/drink_log_direction"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:fontFamily="@font/roboto_mono_medium"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="70dp"/>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/drink_log_drink_hint"
            android:id="@+id/textInputLayoutDrink"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" android:layout_marginTop="40dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:fontFamily="@font/roboto_mono_medium"
                android:textSize="20sp" android:inputType="number" android:id="@+id/drinkVolume_editText"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
            android:id="@+id/save_button"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:text="@string/app_save"
            android:textColor="@android:color/white"
            android:backgroundTint="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="50dp" android:layout_marginEnd="50dp"
            app:layout_constraintHorizontal_bias="1.0"
            android:textSize="20sp"
            android:fontFamily="@font/roboto_mono_medium"
            android:layout_marginBottom="50dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="90dp" app:layout_constraintTop_toBottomOf="@+id/carbonation_checkBox"/>
    <CheckBox
            android:text="@string/drink_log_caffeine_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/caffeine_checkBox" android:textSize="20sp"
            android:fontFamily="@font/roboto_mono_medium"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutDrink" android:layout_marginTop="60dp"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="@+id/textInputLayoutDrink"/>
    <CheckBox
            android:text="@string/drink_log_sugar_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sugar_checkBox"
            android:textSize="20sp"
            android:fontFamily="@font/roboto_mono_medium" android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/caffeine_checkBox" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="@+id/textInputLayoutDrink"/>
    <CheckBox
            android:text="@string/drink_log_alcohol_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/alcohol_checkBox"
            android:textSize="20sp"
            android:fontFamily="@font/roboto_mono_medium" android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/sugar_checkBox" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="@+id/textInputLayoutDrink"/>
    <CheckBox
            android:text="@string/drink_log_carbonation_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/carbonation_checkBox" android:textSize="20sp"
            android:fontFamily="@font/roboto_mono_medium" android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/alcohol_checkBox" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="@+id/textInputLayoutDrink"/>


</androidx.constraintlayout.widget.ConstraintLayout>