...
                                                   android:layout_height="match_parent"
                                                   tools:context=".MainFragment"
                                                   android:animateLayoutChanges="true">


    <com.google.android.material.button.MaterialButton
            android:id="@+id/meter_button"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:text="@string/menu_meter"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
...
            android:layout_height="100dp"
            android:text="@string/menu_void"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="1.0" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="50dp" android:layout_marginEnd="50dp" android:layout_marginTop="35dp"
            app:layout_constraintTop_toBottomOf="@+id/drink_button"
            android:layout_marginBottom="180dp" app:layout_constraintBottom_toBottomOf="parent"
            android:textSize="18sp" android:fontFamily="@font/roboto_mono_medium"/>
    <com.google.android.material.button.MaterialButton
            android:id="@+id/drink_button"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
...
