...
            app:wlv_shapeType="circle"
            app:wlv_round_rectangle="true"
            app:wlv_triangle_direction="north"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" app:wlv_waveAmplitude="30"
            app:wlv_waveColor="@color/colorPrimaryDark" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/progress_textView" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/undo_button"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progress_textView" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="50dp" android:fontFamily="@font/roboto_mono_medium" android:textSize="80sp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"/>

    <SeekBar
            android:id="@+id/progress_seekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:progressDrawable="@drawable/seek_bar"
            android:thumb="@drawable/seek_thumb"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="30dp" app:layout_constraintEnd_toEndOf="parent"
...
